third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/features/complex-expressions/alternate_exprs_range_missing_lower_bound.stderr
error: When ranges are used for alternate values, both bounds most be explicitly specified numeric literals
 --> tests/try_build/compile_fail/features/complex-expressions/alternate_exprs_range_missing_lower_bound.rs:5:32
  |
5 |     #[num_enum(alternatives = [..255])]
  |                                ^^^^^
